bk_ida/gccida/c1/save_comment
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/save_comment/src/cpplex.c:1190:21: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  save_comment( cpp_reader_0 *pfile, cpp_token_0 *token, const unsigned __int8 *from) 
                    ^~~~~~~~~~~~
                    cpp_reader
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/save_comment/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/save_comment/src/cpplex.c:1190:42: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
void  save_comment( cpp_reader_0 *pfile, cpp_token_0 *token, const unsigned __int8 *from) 
                                         ^~~~~~~~~~~
                                         cpp_token
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/save_comment/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/save_comment/src/cpplex.c:1195:45: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
v4 = ( unsigned int)&pfile->buffer->cur[( ( sch_istable[*( ( unsigned __int8 *)pfile->buffer->cur - 1)] & 0x400) == 0) 
                                            ^~~~~~~~~~~
                                            _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/save_comment/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/save_comment/src/obj/cpplex.o] Error 1
